@@ -1,3 +1,6 @@
+######## 2014-8-7 ##########
+alter table shop_weixin_user add column vmobile varchar(24) NOT NULL;
+######### 2014-8-1 ##########
 alter table shop_weixin_product add sync_stock tinyint(1) NOT NULL;
 update shop_weixin_product set sync_stock=1 ;
 ######### 2014-7-28 ##########
